Fixer l'alignement de la loupe

--- a/packages/modul-components/src/components/searchfield/searchfield.scss
+++ b/packages/modul-components/src/components/searchfield/searchfield.scss
@@ -55,6 +55,10 @@
             --m-searchfield--color-button: var(--m-input-style--valid-color);
             --m-searchfield--color-icon: var(--m-searchfield--color-icon-hover);
         }
+
+        svg {
+            align-self: center;
+        }
     }
 
     &__reset {
